# engineering-practices-ml

./: .gitattributes  .pre-commit-config.yaml  Linting.md  README.md  hw2.md  pyproject.toml
hello_world/: include.py  main.py
hw2/: test_dataset.csv
